--- a/.github/workflows/build-ar750s-nand-gl.yaml
+++ b/.github/workflows/build-ar750s-nand-gl.yaml
@@ -37,7 +37,7 @@ env:
   CUSTOM_FEEDS: scripts/customize-feeds.sh
   CUSTOM_CONFIG: scripts/customize-config.sh
   #SSH_ACTIONS: false
-  UPLOAD_BIN_DIR: false
+  UPLOAD_BIN_DIR: true
   UPLOAD_FIRMWARE: true
   ACTIONS_ALLOW_UNSECURE_COMMANDS: true
   TZ: Asia/Shanghai
